/*
 *  UCF COP3330 Fall 2021 Assignment 3 Solution
 *  Copyright 2021 Filipe Frances
 */
package ex45;

public class WordReplacer{
    public static String string(String input, String original, String replacer){
        return input.replace(original, replacer);
    }
}
